--- a/css/index.css
+++ b/css/index.css
@@ -30,8 +30,25 @@ body{
   height: calc(100% - 100px);
 }
 
+.body > .difficultyDiv{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: xx-large;
+  font-family: cursive;
+  border: 2px solid black;
+  border-radius: 20px;
+  padding: 50px;
+  width: 60%;
+}
+
+ .difficultyDiv > .btn-group  > .btn{
+   border: 2px solid black;
+ }
+
+
 .mask input{
-  margin: 0;
   position: absolute;
   top: 50%;
   left: 50%;
