--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+html { font-size: 62.5%; }
+
 body{
   background: url('./../background.jpg');
 }
@@ -28,6 +30,7 @@ body{
 
 .body{
   height: calc(100% - 100px);
+  font-size: 100%;
 }
 
 .body > .preferenceDiv{
@@ -39,8 +42,9 @@ body{
   font-family: cursive;
   border: 2px solid black;
   border-radius: 20px;
-  padding: 50px;
+  padding: 20px;
   width: 60%;
+  min-width: 200px;
 }
 
  .preferenceDiv > .btn-group  > .btn{
@@ -72,16 +76,18 @@ body{
 
 .container{
   margin-top: 100px;
-  width: 500px;
+  width: 100%;
+  max-width: 500px;
   border: 1px solid black;
 }
 .body >.instructionDiv{
   font-size: xx-large;
   font-family: cursive;
   border: 2px solid black;
-  width: 100%;
+  width: 80%;
   border-radius: 25px;
   margin-top: 40px;
+  margin-left: 10%;
 }
 
 .row{
