--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 html { font-size: 62.5%; }
 
 body{
-  background: url('./../background.jpg');
+  background: url('./../background.png');
 }
 
 .header{
