--- a/css/index.css
+++ b/css/index.css
@@ -134,7 +134,7 @@ body{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: -webkit-xxx-large;
+  font-size: xx-large;
   font-family: cursive;
   color: #096108;
 }
