--- a/css/index.css
+++ b/css/index.css
@@ -43,8 +43,8 @@ body{
   border: 2px solid black;
   border-radius: 20px;
   padding: 20px;
-  width: 60%;
-  min-width: 200px;
+  width: 90%;
+  max-width: 600px;
 }
 
  .preferenceDiv > .btn-group  > .btn{
